Fix bugs in handling securities